fixed margin on mobile

--- a/home/css/style.css
+++ b/home/css/style.css
@@ -238,6 +238,10 @@
         margin-bottom: 0;
     }
 
+    .section .row {
+        margin: 40px auto;
+    }
+
     .logos.section .row .wrapper {
         gap: 10px;
         flex-flow: row wrap;
